Fixed any spacing problems

--- a/styles/SafeAtMacewan.css
+++ b/styles/SafeAtMacewan.css
@@ -320,19 +320,23 @@ nav.nav-layout{
   column-gap: 180px;
   margin-right: 100px;
   padding-bottom: 188px;
+  align-items: center;
 }
 
 .text-info{
+  display: flex;
   background-color: #D51F37;
   border-radius: 40px;
   width: 760px;
   height: 300px;
-  padding: 44px 50px 0px 50px;
+  align-items: center;
+  padding: 0px 92px 0px 92px;
 }
 
 .text-info p{
   font-size: 35px;
   color: white;
+  line-height: 1.5em;
 }
 
 .bold-text{
@@ -581,15 +585,18 @@ nav.nav-layout{
     row-gap: 30px;
     margin-right: 30px;
     padding-bottom: 44px;
+    align-items: start;
   }
+
   .text-display h4{
     font-size: 40px;
   }
 
   .text-info{
+    display: flex;
+    flex-wrap: wrap;
     width: 350px;
-    height: 161px;
-
+    height: auto;
   }
 
   .text-info p{
