--- a/styles/myPortal.css
+++ b/styles/myPortal.css
@@ -50,7 +50,7 @@ h5{
   font-family: "Inter";
   font-size: 40px;
   font-weight: 600;
-  line-height: 0px;
+  line-height: regular;
 }
 
 h6{
@@ -396,10 +396,17 @@ ul{
   }
 
   .link{
-    width: 360px;
+    width: 100%;
     height: 40px;
   }
 
+  .left-links{
+    padding-right: 30px;
+  }
+
+   .right-links{
+      padding-right: 30px;
+  }
   .link h6{
     font-size: 20px;
   }
@@ -412,6 +419,9 @@ ul{
     margin-left: 20px;
   }
 
+  .title{
+    padding-bottom: 25px;
+  }
   .title h2{
     font-size: 40px;
   }
@@ -421,7 +431,14 @@ ul{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: left;
-    justify-self: center;
+  }
+  .calendar-title h5{
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
+  .calendar-title h6{
+    margin-top: 10px;
   }
 
   .hide-box{
@@ -436,6 +453,7 @@ ul{
   }
   .no-rightborder{
     border-right-style: solid;
+    border-width: thick;
     height: 250px;
     width: auto;
     justify-content: space-between;
@@ -451,8 +469,8 @@ ul{
 
   .hidden-dots{
     display: flex;
-    justify-self: center;
-    padding-top: 15px;
+    justify-content: center;
+    padding-top: 10px;
   }
 
   .mini-box{
@@ -464,6 +482,11 @@ ul{
     margin-top: 20px;
     font-size: 20px;
 
+  }
+
+  .news-display{
+    margin-top: 0px;
+    row-gap: 0;
   }
 
   .news-post{
